v6/v6.css
/* ... */
.ssp-main-container .row-feature-dotted ul {
  padding-left: 0;
  list-style-type: none;
}
.ssp-main-container .row-feature-dotted li {
  clear: both;
  margin: 0;
  padding-top: 20px;
}
.ssp-main-container .row-feature-dotted li .media-body {
  padding-left: 15px;
}
.ssp-main-container .row-feature-dotted li .media-body a {
  display: inline;
}
.ssp-main-container .row-feature-dotted li .media-body p.divide-bottom {
  display: block;
  padding-bottom: 40px;
  border-bottom: 1px dotted #444;
}
.ssp-main-container .row-feature-dotted li img {
  max-height: 120px;
  margin: 0 auto;
}
.ssp-main-container .row-feature-dotted li:last-of-type .media-body a {
  border-bottom: none;
}
.ssp-main-container .row-webinar-videos aside {
  padding: 20px 40px;
  margin: 10px 0 30px;
}
.ssp-main-container .row-webinar-videos .object-fit {
  height: 200px;
  border: 1px solid black;
  border-bottom: 0;
  margin-top: 10px;
  margin-bottom: 15px;
}
.ssp-main-container .row-webinar-videos .video-title {
  display: block;
  background-color: rgba(0, 0, 0, 0.5);
  color: #fff;
  padding: 10px;
  border: 1px solid black;
  border-top: 0;
  margin-bottom: 20px;
}
.ssp-main-container .row-webinar-related aside {
  padding: 20px 40px;
}
.ssp-main-container .row-related-links img {
  width: 100%;
}
.ssp-main-container .row-related-links h3 {
  margin-bottom: 20px;
}
.ssp-main-container .row-related-links section {
  margin-bottom: 30px;
}
.ssp-main-container .row-related-links section aside h4 {
  margin-top: 0;
}
.ssp-main-container .row-related-links ul {
  list-style-type: none;
  padding: 0;
}
.ssp-main-container .row-related-links ul li {
  border-bottom: 1px solid #aeaeae;
  padding-bottom: 15px;
  margin-bottom: 15px;
}
.ssp-main-container .row-related-links li:last-of-type {
  border-bottom: 0;
  padding-bottom: 0;
  margin-bottom: 0;
}
.ssp-main-container .row-related-links a,
.ssp-main-container .row-related-links li a,
.ssp-main-container .row-related-links p a {
  font-family: 'proxima_nova_rgbold', sans-serif;
  font-weight: 400;
}
.ssp-main-container .row-related-links a em,
.ssp-main-container .row-related-links li a em,
.ssp-main-container .row-related-links p a em {
  font-family: 'proxima_nova_bold_italic', sans-serif;
  font-weight: 400;
  font-style: normal;
}
.ssp-main-container .row-table-equal-height [class^=col],
.ssp-main-container .row-table-equal-height-bottom [class^=col],
.ssp-main-container .row-table-equal-height-bottom-sm [class^=col],
.ssp-main-container .row-table-equal-height-button [class^=col],
.ssp-main-container .row-table-equal-height-md [class^=col],
.ssp-main-container .row-table-equal-height-md-one-third [class^=col],
.ssp-main-container .row-table-equal-height-middle [class^=col],
.ssp-main-container .row-table-equal-height-top [class^=col],
.ssp-main-container .row-table-equal-height-top-middles [class^=col] {
  margin: 0 auto;
  height: 100%;
}
.ssp-main-container .row-table-equal-height.gray-columns,
.ssp-main-container .row-table-equal-height-bottom.gray-columns,
.ssp-main-container .row-table-equal-height-bottom-sm.gray-columns,
.ssp-main-container .row-table-equal-height-button.gray-columns,
.ssp-main-container .row-table-equal-height-md.gray-columns,
.ssp-main-container .row-table-equal-height-md-one-third.gray-columns,
.ssp-main-container .row-table-equal-height-middle.gray-columns,
.ssp-main-container .row-table-equal-height-top.gray-columns,
.ssp-main-container .row-table-equal-height-top-middles.gray-columns {
  border-spacing: 20px;
}
.ssp-main-container .row-table-equal-height .product-features,
.ssp-main-container .row-table-equal-height-bottom .product-features,
.ssp-main-container .row-table-equal-height-bottom-sm .product-features,
.ssp-main-container .row-table-equal-height-button .product-features,
.ssp-main-container .row-table-equal-height-md .product-features,
.ssp-main-container .row-table-equal-height-md-one-third .product-features,
.ssp-main-container .row-table-equal-height-middle .product-features,
.ssp-main-container .row-table-equal-height-top .product-features,
.ssp-main-container .row-table-equal-height-top-middles .product-features {
  color: #41779c;
  line-height: 28px;
}
.ssp-main-container .row-table-equal-height h6,
.ssp-main-container .row-table-equal-height-bottom h6,
.ssp-main-container .row-table-equal-height-bottom-sm h6,
.ssp-main-container .row-table-equal-height-button h6,
.ssp-main-container .row-table-equal-height-md h6,
.ssp-main-container .row-table-equal-height-md-one-third h6,
.ssp-main-container .row-table-equal-height-middle h6,
.ssp-main-container .row-table-equal-height-top h6,
.ssp-main-container .row-table-equal-height-top-middles h6 {
  display: inline-block;
  font-size: 1em;
}
.ssp-main-container .row-table-equal-height svg,
.ssp-main-container .row-table-equal-height-bottom svg,
.ssp-main-container .row-table-equal-height-bottom-sm svg,
.ssp-main-container .row-table-equal-height-button svg,
.ssp-main-container .row-table-equal-height-md svg,
.ssp-main-container .row-table-equal-height-md-one-third svg,
.ssp-main-container .row-table-equal-height-middle svg,
.ssp-main-container .row-table-equal-height-top svg,
.ssp-main-container .row-table-equal-height-top-middles svg {
  position: relative;
  bottom: 1px;
  margin-right: 5px;
}
.ssp-main-container .row-table-equal-height figure,
.ssp-main-container .row-table-equal-height-bottom figure,
.ssp-main-container .row-table-equal-height-bottom-sm figure,
.ssp-main-container .row-table-equal-height-button figure,
.ssp-main-container .row-table-equal-height-md figure,
.ssp-main-container .row-table-equal-height-md-one-third figure,
.ssp-main-container .row-table-equal-height-middle figure,
.ssp-main-container .row-table-equal-height-top figure,
.ssp-main-container .row-table-equal-height-top-middles figure {
  height: 250px;
  display: table-cell;
  vertical-align: middle;
}
/* ... */

